# ACTS-Core

./: .gitlab-ci.yml  AUTHORS  CMakeLists.txt  version_number
CI/: requirements.txt
Core/: CMakeLists.txt
Core/include/ACTS/Material/: IMaterialMapReader.hpp  IMaterialMapWriter.hpp
Core/include/Acts/Detector/: DetachedTrackingVolume.hpp  GlueVolumesDescriptor.hpp  TrackingGeometry.hpp  TrackingVolume.hpp
Core/include/Acts/EventData/: MultiBoundTrackParameters.hpp  MultiCurvilinearTrackParameters.hpp  MultiTrackParameters.hpp  NeutralParameters.hpp  ParameterSet.hpp  SingleBoundTrackParameters.hpp  SingleCurvilinearTrackParameters.hpp  SingleTrackParameters.hpp  TrackParameters.hpp  TrackParametersBase.hpp
Core/include/Acts/Extrapolator/: MaterialInteractor.hpp  MultiMaterialInteractor.hpp  Navigator.hpp  SurfaceCollector.hpp
Core/include/Acts/Fitter/: GainMatrixSmoother.hpp  GainMatrixUpdater.hpp  KalmanFitter.hpp
Core/include/Acts/Geometry/: ApproachDescriptor.hpp  CylinderVolumeBuilder.hpp  GenericApproachDescriptor.hpp  GeometryContext.hpp  Layer.hpp  TrackingVolume.hpp
Core/include/Acts/Layers/: ConeLayer.hpp  DiscLayer.hpp  Layer.hpp  PlaneLayer.hpp
Core/include/Acts/MagneticField/: MagneticFieldContext.hpp
Core/include/Acts/Material/: BinnedSurfaceMaterial.hpp  HomogeneousSurfaceMaterial.hpp  Material.hpp  MaterialCollector.hpp  ProtoSurfaceMaterial.hpp  (+2 more)
Core/src/Detector/: TrackingGeometry.cpp  TrackingVolume.cpp
Core/src/Geometry/: CylinderVolumeBuilder.cpp  CylinderVolumeHelper.cpp  GenericApproachDescriptor.cpp  TrackingVolume.cpp
Core/src/Layers/: CylinderLayer.cpp  DiscLayer.cpp  Layer.cpp  ProtoLayer.cpp
Core/src/Material/: SurfaceMaterialMapper.cpp  SurfaceMaterialProxy.cpp
Core/src/Surfaces/: ConeSurface.cpp  CylinderBounds.cpp  CylinderSurface.cpp  DiscSurface.cpp  EllipseBounds.cpp  LineSurface.cpp  PerigeeSurface.cpp  PlaneSurface.cpp  StrawSurface.cpp  Surface.cpp  SurfaceArray.cpp
Core/src/Tools/: CuboidVolumeBuilder.cpp  CylinderVolumeHelper.cpp  LayerArrayCreator.cpp  LayerCreator.cpp  PassiveLayerBuilder.cpp  SurfaceArrayCreator.cpp  TrackingGeometryBuilder.cpp
Core/src/Utilities/: BFieldMapUtils.cpp
Core/src/Volumes/: Volume.cpp
Plugins/: CMakeLists.txt
Plugins/DD4hep/src/: ActsExtension.cpp  ConvertDD4hepDetector.cpp  DD4hepLayerBuilder.cpp
Plugins/Digitization/src/: CartesianSegmentation.cpp  PlanarModuleStepper.cpp
Plugins/MaterialMapping/src/: AccumulatedSurfaceMaterial.cpp  SurfaceMaterialMapper.cpp
Plugins/ProtobufPlugin/: CMakeLists.txt  MaterialMap.proto
Plugins/ProtobufPlugin/include/ACTS/Plugins/ProtobufPlugin/: ProtobufMaterialMapReader.hpp  ProtobufMaterialMapWriter.hpp
Plugins/ProtobufPlugin/python/: print_material_map.py
Plugins/ProtobufPlugin/src/: ProtobufMaterialLoader.cpp  ProtobufMaterialMapWriter.cpp  ProtobufMaterialReader.cpp  test.cpp  test.cppx
Plugins/TGeo/src/: TGeoDetectorElement.cpp
Tests/Core/: CMakeLists.txt
Tests/Core/Detector/: TrackingGeometryCreationTests.cpp  TrackingVolumeCreation.hpp
Tests/Core/EventData/: BoundParametersTests.cpp  CMakeLists.txt  MultiBoundParametersTests.cpp  MultiCurvilinearParametersTests.cpp  ParameterSetTests.cpp  ParametersTestHelper.hpp
Tests/Core/Extrapolator/: CMakeLists.txt  ComponentReductionTests.cpp  DistanceTests.cpp  ExtrapolatorComponentReductionTests.cpp  ExtrapolatorTestGeometry.hpp  ExtrapolatorTests.cpp  KalmanExtrapolatorTests.cpp  MultiComponentExtrapolatorTests.cpp  MultiMaterialCollectionTests.cpp  MultiMaterialInteractionTests.cpp  NavigatorTests.cpp
Tests/Core/Fitter/: CMakeLists.txt  GainMatrixSmootherTests.cpp  GainMatrixUpdaterTests.cpp  KalmanFitterTests.cpp
Tests/Core/Geometry/: BVHDataTestCase.hpp  CuboidVolumeBuilderTests.cpp  LayerTests.cpp
Tests/Core/Layers/: ConeLayerTests.cpp  CylinderLayerTests.cpp  DiscLayerTests.cpp  LayerStub.hpp  LayerTests.cpp  NavigationLayerTests.cpp  PlaneLayerTests.cpp
Tests/Core/Material/: CMakeLists.txt  HomogeneousSurfaceMaterialTests.cpp  MaterialCompositionTests.cpp  MaterialTests.cpp  ProtoSurfaceMaterialTests.cpp  VolumeMaterialMapperTests.cpp
Tests/Core/Propagator/: AbortListTests.cpp  AtlasStepperBenchmark.cpp  CMakeLists.txt  ConditionListTests.cpp  ConstrainedStepTests.cpp  EigenStepperBenchmark.cpp  ExtrapolatorTests.cpp  FSMNavigatorTests.cpp  JacobianTests.cpp  KalmanExtrapolatorTests.cpp  LoopProtectionTests.cpp  MaterialCollectionTests.cpp  NavigatorTests.cpp  OversteppingTests.cpp  PropagatorTests.cpp  StepperBenchmark.hpp  StepperTests.cpp
Tests/Core/Seeding/: CMakeLists.txt  SeedfinderTest.cpp  sp.txt
Tests/Core/Surfaces/: CMakeLists.txt  ConeSurfaceTests.cpp  CylinderSurfaceTests.cpp  DetectorElementStub.hpp  DiscSurfaceTests.cpp  LineSurfaceTests.cpp  PerigeeSurfaceTests.cpp  PlaneSurfaceTests.cpp  StrawSurfaceTests.cpp  SurfaceArrayTests.cpp  SurfaceIntersectionTests.cpp  SurfaceStub.hpp  SurfaceTests.cpp
Tests/Core/Tools/: CuboidVolumeBuilderTests.cpp  LayerCreatorTests.cpp  SurfaceArrayCreatorTests.cpp
Tests/Core/Utilities/: BFieldMapUtilsTests.cpp  BinUtilityTests.cpp  CMakeLists.txt  FiniteStateMachineTests.cpp  IntersectionTests.cpp  MPLTests.cpp  ResultTests.cpp  TestHelper.hpp
Tests/Core/Vertexing/: FullBilloirVertexFitterTests.cpp  IterativeVertexFinderTests.cpp  LinearizedTrackFactoryTests.cpp  TrackToVertexIPEstimatorTests.cpp  ZScanVertexFinderTests.cpp
Tests/Core/Volumes/: CylinderVolumeBoundsTests.cpp
Tests/Integration/: InterpolatedSolenoidBFieldTest.cpp  PropagationTestBase.hpp  PropagationTestHelper.hpp  PropagationTests.cpp  covariance_validation_fixture.hpp
Tests/Plugins/: CMakeLists.txt
Tests/Plugins/Digitization/: ClusterizationTests.cpp  DetectorElementStub.hpp  DoubleHitSpacePointBuilderTests.cpp  SingleHitSpacePointBuilderTests.cpp
Tests/Plugins/Json/: FromJsonTests.cpp
Tests/Plugins/MaterialMapping/: AccumulatedMaterialPropertiesTests.cpp  AccumulatedSurfaceMaterialTests.cpp  SurfaceMaterialMapperTests.cpp
cmake/: ActsCompilerOptions.cmake
seed_inputs/: sample_10k.txt  sample_20k.txt  sample_50k.txt
(+138 files in other folders)
