add_executable (NavigatorTests NavigatorTests.cpp)
target_link_libraries (NavigatorTests PRIVATE ActsCore ActsTestsCommonHelpers ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
add_test(NAME NavigatorUnitTests COMMAND NavigatorTests)
acts_add_test_to_cdash_project (PROJECT ACore TEST NavigatorUnitTests TARGETS NavigatorTests)

add_executable (MaterialCollectionTests MaterialCollectionTests.cpp)
target_link_libraries (MaterialCollectionTests PRIVATE ActsCore ActsTestsCommonHelpers ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
add_test(NAME MaterialCollectionUnitTests COMMAND MaterialCollectionTests)
acts_add_test_to_cdash_project (PROJECT ACore TEST MaterialCollectionUnitTests TARGETS MaterialCollectionTests)
    
add_executable (ExtrapolatorTests ExtrapolatorTests.cpp)
target_link_libraries (ExtrapolatorTests PRIVATE ActsCore ActsTestsCommonHelpers ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
add_test(NAME ExtrapolatorUnitTests COMMAND ExtrapolatorTests)
acts_add_test_to_cdash_project (PROJECT ACore TEST ExtrapolatorUnitTests TARGETS ExtrapolatorTests)

add_executable (KalmanExtrapolatorTests KalmanExtrapolatorTests.cpp)
target_link_libraries (KalmanExtrapolatorTests PRIVATE ActsCore ActsTestsCommonHelpers ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
add_test(NAME KalmanExtrapolatorUnitTests COMMAND KalmanExtrapolatorTests)
acts_add_test_to_cdash_project (PROJECT ACore TEST KalmanExtrapolatorUnitTests TARGETS KalmanExtrapolatorTests)

add_executable (MultiComponentExtrapolatorTests MultiComponentExtrapolatorTests.cpp)
target_link_libraries (MultiComponentExtrapolatorTests PRIVATE ActsCore ActsTestsCommonHelpers ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
add_test(NAME MultiComponentExtrapolatorUnitTests COMMAND MultiComponentExtrapolatorTests)
acts_add_test_to_cdash_project (PROJECT ACore TEST MultiComponentExtrapolatorUnitTests TARGETS MultiComponentExtrapolatorTests)

add_executable (MultiMaterialInteractionTests MultiMaterialInteractionTests.cpp)
target_link_libraries (MultiMaterialInteractionTests PRIVATE ActsCore ActsTestsCommonHelpers ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
add_test(NAME MultiMaterialInteractionUnitTests COMMAND MultiMaterialInteractionTests)
acts_add_test_to_cdash_project (PROJECT ACore TEST MultiMaterialInteractionUnitTests TARGETS MultiMaterialInteractionTests)

add_executable (ExtrapolatorComponentReductionTests ExtrapolatorComponentReductionTests.cpp)
target_link_libraries (ExtrapolatorComponentReductionTests PRIVATE ActsCore ActsTestsCommonHelpers ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
add_test(NAME ExtrapolatorComponentReductionUnitTests COMMAND ExtrapolatorComponentReductionTests)
acts_add_test_to_cdash_project (PROJECT ACore TEST ExtrapolatorComponentReductionUnitTests TARGETS ExtrapolatorComponentReductionTests)

add_executable (ComponentReductionTests ComponentReductionTests.cpp)
target_link_libraries (ComponentReductionTests PRIVATE ActsCore ActsTestsCommonHelpers ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
add_test(NAME ComponentReductionUnitTests COMMAND ComponentReductionTests)
acts_add_test_to_cdash_project (PROJECT ACore TEST ComponentReductionUnitTests TARGETS ComponentReductionTests)
