add_executable (MaterialCompositionTests MaterialCompositionTests.cpp)
target_include_directories (MaterialCompositionTests PRIVATE ${Boost_INCLUDE_DIRS})
target_link_libraries (MaterialCompositionTests PRIVATE ActsCore ActsTestsCommonHelpers)

add_executable (MaterialTests MaterialTests.cpp)
target_include_directories (MaterialTests PRIVATE ${Boost_INCLUDE_DIRS})
target_link_libraries (MaterialTests PRIVATE ActsCore ActsTestsCommonHelpers)

add_executable (MaterialPropertiesTests MaterialPropertiesTests.cpp)
target_include_directories (MaterialPropertiesTests PRIVATE ${Boost_INCLUDE_DIRS})
target_link_libraries (MaterialPropertiesTests PRIVATE ActsCore ActsTestsCommonHelpers)

add_executable (HomogeneousSurfaceMaterialTests HomogeneousSurfaceMaterialTests.cpp)
target_include_directories (HomogeneousSurfaceMaterialTests PRIVATE ${Boost_INCLUDE_DIRS})
target_link_libraries (HomogeneousSurfaceMaterialTests PRIVATE ActsCore ActsTestsCommonHelpers)

add_executable (BinnedSurfaceMaterialTests BinnedSurfaceMaterialTests.cpp)
target_include_directories (BinnedSurfaceMaterialTests PRIVATE ${Boost_INCLUDE_DIRS})
target_link_libraries (BinnedSurfaceMaterialTests PRIVATE ActsCore)

add_executable (ProtoSurfaceMaterialTests ProtoSurfaceMaterialTests.cpp)
target_include_directories (ProtoSurfaceMaterialTests PRIVATE ${Boost_INCLUDE_DIRS})
target_link_libraries (ProtoSurfaceMaterialTests PRIVATE ActsCore)

add_test (NAME MaterialUnitTest COMMAND MaterialCompositionTests MaterialTests MaterialPropertiesTests HomogeneousSurfaceMaterialTests BinnedSurfaceMaterialTests ProtoSurfaceMaterialTests)
acts_add_test_to_cdash_project (PROJECT ACore TEST MaterialUnitTest TARGETS MaterialCompositionTests MaterialTests MaterialPropertiesTests HomogeneousSurfaceMaterialTests BinnedSurfaceMaterialTests ProtoSurfaceMaterialTests)
